some changes in code

--- a/views/partials/menu.ejs
+++ b/views/partials/menu.ejs
@@ -1,10 +1,10 @@
 <div
-  class="menubox absolute top-[8vmax] right-0 w-[0%] border-t-2 border-white bg-[#cf2e2e] hidden max-sm:flex flex-col z-20"
+  class="menubox absolute top-[8vmax] right-[-60%] w-[60%] border-t-2 border-white bg-[#cf2e2e] hidden max-sm:flex flex-col z-20"
   style="height: calc(100vh - 8vmax); transition: 0.25s linear"
 >
   <% if(user){ %>
   <a
-    href="/profile"
+    href="/user/profile"
     class="text-[2vmax] text-white border-b-2 py-[1.5vmax] px-[2.5vmax]"
     >Home</a
   >
@@ -40,9 +40,17 @@
     class="text-[2vmax] text-white border-b-2 py-[1.5vmax] px-[2.5vmax]"
     >FAQ</a
   >
+  <% if(user){ %>
+  <a
+    href="/user/logout"
+    class="text-[2vmax] text-white border-b-2 py-[1.5vmax] px-[2.5vmax]"
+    >Logout</a
+  >
+  <% }else{ %>
   <a
     href="/user/login"
     class="text-[2vmax] text-white border-b-2 py-[1.5vmax] px-[2.5vmax]"
     >Member login</a
   >
+  <% } %>
 </div>
