--- a/public/stylesheets/output.css
+++ b/public/stylesheets/output.css
@@ -594,12 +594,24 @@ video {
   top: 8vmax;
 }
 
+.right-\[-\] {
+  right: -;
+}
+
+.right-\[-60\%\] {
+  right: -60%;
+}
+
 .z-10 {
   z-index: 10;
 }
 
 .z-20 {
   z-index: 20;
+}
+
+.ml-\[\.2vmax\] {
+  margin-left: .2vmax;
 }
 
 .mr-2 {
@@ -648,22 +660,6 @@ video {
 
 .mt-\[4vmax\] {
   margin-top: 4vmax;
-}
-
-.ml-1 {
-  margin-left: 0.25rem;
-}
-
-.ml-\[1vmax\] {
-  margin-left: 1vmax;
-}
-
-.ml-\[\.5vmax\] {
-  margin-left: .5vmax;
-}
-
-.ml-\[\.2vmax\] {
-  margin-left: .2vmax;
 }
 
 .block {
@@ -730,6 +726,10 @@ video {
   width: 100%;
 }
 
+.w-\[60\%\] {
+  width: 60%;
+}
+
 .translate-x-\[-50\%\] {
   --tw-translate-x: -50%;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
@@ -776,6 +776,10 @@ video {
   overflow: hidden;
 }
 
+.overflow-x-hidden {
+  overflow-x: hidden;
+}
+
 .rounded-lg {
   border-radius: 0.5rem;
 }
@@ -792,28 +796,16 @@ video {
   border-width: 2px;
 }
 
-.border {
-  border-width: 1px;
-}
-
 .border-b-2 {
   border-bottom-width: 2px;
-}
-
-.border-t-2 {
-  border-top-width: 2px;
-}
-
-.border-b {
-  border-bottom-width: 1px;
 }
 
 .border-b-\[1px\] {
   border-bottom-width: 1px;
 }
 
-.border-b-\[2px\] {
-  border-bottom-width: 2px;
+.border-t-2 {
+  border-top-width: 2px;
 }
 
 .border-none {
@@ -931,6 +923,10 @@ video {
   padding-bottom: 8vmax;
 }
 
+.pb-\[3px\] {
+  padding-bottom: 3px;
+}
+
 .pb-\[4\.5vmax\] {
   padding-bottom: 4.5vmax;
 }
@@ -951,32 +947,16 @@ video {
   padding-top: 8vmax;
 }
 
-.pb-2 {
-  padding-bottom: 0.5rem;
-}
-
-.pb-1 {
-  padding-bottom: 0.25rem;
-}
-
-.pb-\[1px\] {
-  padding-bottom: 1px;
-}
-
-.pb-\[2px\] {
-  padding-bottom: 2px;
-}
-
-.pb-\[3px\] {
-  padding-bottom: 3px;
-}
-
 .text-left {
   text-align: left;
 }
 
 .text-center {
   text-align: center;
+}
+
+.text-right {
+  text-align: right;
 }
 
 .text-\[1\.1vmax\] {
@@ -1250,6 +1230,18 @@ video {
     padding: 2.5vmax;
   }
 
+  .max-sm\:p-\[1\.2vmax\] {
+    padding: 1.2vmax;
+  }
+
+  .max-sm\:p-\[1\.vmax\] {
+    padding: 1.vmax;
+  }
+
+  .max-sm\:p-\[1\.5vmax\] {
+    padding: 1.5vmax;
+  }
+
   .max-sm\:px-\[1\.2vmax\] {
     padding-left: 1.2vmax;
     padding-right: 1.2vmax;
@@ -1285,6 +1277,41 @@ video {
     padding-bottom: 4vmax;
   }
 
+  .max-sm\:py-\[1\.2vmax\] {
+    padding-top: 1.2vmax;
+    padding-bottom: 1.2vmax;
+  }
+
+  .max-sm\:py-\[\] {
+    padding-top: ;
+    padding-bottom: ;
+  }
+
+  .max-sm\:py-\[1\.5vmax\] {
+    padding-top: 1.5vmax;
+    padding-bottom: 1.5vmax;
+  }
+
+  .max-sm\:px-\[1vmax\] {
+    padding-left: 1vmax;
+    padding-right: 1vmax;
+  }
+
+  .max-sm\:px-\[1\.3vmax\] {
+    padding-left: 1.3vmax;
+    padding-right: 1.3vmax;
+  }
+
+  .max-sm\:px-\[\.8vmax\] {
+    padding-left: .8vmax;
+    padding-right: .8vmax;
+  }
+
+  .max-sm\:px-\[1\.5vmax\] {
+    padding-left: 1.5vmax;
+    padding-right: 1.5vmax;
+  }
+
   .max-sm\:pb-\[1\.5vmax\] {
     padding-bottom: 1.5vmax;
   }
@@ -1311,6 +1338,14 @@ video {
 
   .max-sm\:pt-\[2vmax\] {
     padding-top: 2vmax;
+  }
+
+  .max-sm\:pb-\[4vmax\] {
+    padding-bottom: 4vmax;
+  }
+
+  .max-sm\:pb-\[3\.5vmax\] {
+    padding-bottom: 3.5vmax;
   }
 
   .max-sm\:text-center {
@@ -1345,6 +1380,10 @@ video {
     font-size: 4vmax;
   }
 
+  .max-sm\:text-\[3\.5vmax\] {
+    font-size: 3.5vmax;
+  }
+
   .max-sm\:leading-\[2\.1vmax\] {
     line-height: 2.1vmax;
   }
@@ -1359,5 +1398,13 @@ video {
 
   .max-sm\:leading-\[3vmax\] {
     line-height: 3vmax;
+  }
+
+  .max-sm\:leading-\[3\.5vmax\] {
+    line-height: 3.5vmax;
+  }
+
+  .max-sm\:text-\[\] {
+    color: ;
   }
 }
