--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,4 +1,5 @@
 <%- include('./partials/header')%>
 <!--  -->
+<div class="wrapper min-h-screen w-full"></div>
 <!--  -->
 <%- include('./partials/footer')%>
