--- a/views/partials/menu.ejs
+++ b/views/partials/menu.ejs
@@ -10,7 +10,7 @@
   >
   <% }else{ %>
   <a
-    href="/home"
+    href="/"
     class="text-[2vmax] text-white border-b-2 py-[1.5vmax] px-[2.5vmax]"
     >Home</a
   >
