--- a/views/userLogin.ejs
+++ b/views/userLogin.ejs
@@ -26,7 +26,7 @@
       />
       <button
         type="submit"
-        class="block w-[100%] p-[1vmax] mt-[2vmax] bg-blue-600 text-white rounded-md max-sm:p-[1.5vmax] max-sm:mt-[3vmax]"
+        class="block w-[100%] p-[1vmax] mt-[2vmax] bg-blue-600 text-white rounded-md max-sm:p-[1.5vmax] max-sm:mt-[3vmax] max-sm:text-[2vmax]"
       >
         Login
       </button>
@@ -37,7 +37,7 @@
       Don't have an account?
       <br />
       <a
-        class="[1.2vmax] text-white border-b-[1px] border-white pb-[3px] ml-[.2vmax]"
+        class="text-white border-b-[1px] border-white pb-[3px]"
         href="/user/register"
         >Create new account</a
       >
