--- a/views/about.ejs
+++ b/views/about.ejs
@@ -9,7 +9,7 @@
     <h1
       class="text-[3vmax] font-semibold text-zinc-500 tracking-tight max-sm:text-[4vmax]"
     >
-      About <span class="text-[#cf2e2e]">us</span>
+      About <span class="text-[#800000]">us</span>
     </h1>
     <div
       class="langbox relative py-[.6vmax] bg-white flex justify-between max-sm:py-[1vmax]"
@@ -27,7 +27,7 @@
         हिन्दी
       </button>
       <div
-        class="toggle h-full w-[7vmax] bg-[#cf2e2e] absolute top-0 left-0 rounded-lg max-sm:w-[11vmax]"
+        class="toggle h-full w-[7vmax] bg-[#800000] absolute top-0 left-0 rounded-lg max-sm:w-[11vmax]"
         style="transition: 0.25s linear"
       ></div>
     </div>
@@ -62,7 +62,7 @@
       who are looking for life partner through us.
     </p>
     <h3
-      class="text-[2vmax] text-[#cf2e2e] font-bold mt-[1.3vmax] max-sm:text-[3vmax] max-sm:mt-[1vmax] max-sm:mb-[-.9vmax]"
+      class="text-[2vmax] text-[#800000] font-bold mt-[1.3vmax] max-sm:text-[3vmax] max-sm:mt-[1vmax] max-sm:mb-[-.9vmax]"
     >
       Our mission :-
     </h3>
@@ -120,14 +120,14 @@
       हैं।
     </p>
     <h3
-      class="text-[1.8vmax] text-[#cf2e2e] font-semibold mt-[1.3vmax] max-sm:text-[2.8vmax] max-sm:mb-[-.8vmax]"
+      class="text-[1.8vmax] text-[#800000] font-semibold mt-[1.3vmax] max-sm:text-[2.8vmax] max-sm:mb-[-.8vmax]"
     >
       हमारा मिशन :-
     </h3>
     <p
       class="leading-[2.5vmax] text-[1.4vmax] max-sm:leading-[3.5vmax] max-sm:text-[2vmax]"
     >
-      हमारा मिशन मध्य प्रदेश के लोगों लिए विशेष सेवा प्रदान करना है,लोगों को एक
+      हमारा मिशन मध्य प्रदेश लोगों के लिए विशेष सेवा प्रदान करना है,लोगों को एक
       ऐसी सेवा प्रदान कराना जो सभी के लिए पसन्द का जीवन-साथी ढूंढने के लिए
       सुरक्षित और आसान हो।
     </p>
