--- a/views/adminRegister.ejs
+++ b/views/adminRegister.ejs
@@ -11,7 +11,7 @@
     <div
       class="holder formHolder h-screen w-full flex items-center justify-center relative bg-white"
     >
-      <div class="loginPanel text-center bg-[#cf2e2e] p-[4vmax] rounded-md">
+      <div class="loginPanel text-center bg-[#800000] p-[4vmax] rounded-md">
         <h1 class="text-[2vmax] text-white tracking-tight">
           Admin Registration
         </h1>
