--- a/views/partials/menu.ejs
+++ b/views/partials/menu.ejs
@@ -1,5 +1,5 @@
 <div
-  class="menubox absolute top-[8vmax] right-[-60%] w-[60%] border-t-2 border-white bg-[#cf2e2e] hidden max-sm:flex flex-col z-20"
+  class="menubox absolute top-[8vmax] right-[-60%] w-[60%] border-t-2 border-white bg-[#800000] hidden max-sm:flex flex-col z-20"
   style="height: calc(100vh - 8vmax); transition: 0.25s linear"
 >
   <% if(user){ %>
