--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -1,6 +1,6 @@
 <% if(user){ %>
 <div
-  class="navbox absolute top-0 left-0 h-[5vmax] w-full bg-[#cf2e2e] flex items-center justify-between px-[5vmax] text-[#fff] z-20 max-sm:px-[2.5vmax] max-sm:h-0 max-sm:py-[4vmax]"
+  class="navbox absolute top-0 left-0 h-[5vmax] w-full bg-[#800000] flex items-center justify-between px-[5vmax] text-[#fff] z-20 max-sm:px-[2.5vmax] max-sm:h-0 max-sm:py-[4vmax]"
 >
   <h1 class="text-[1.5vmax]">Logo</h1>
   <div
@@ -14,7 +14,7 @@
   </div>
   <a href="/user/logout" class="max-sm:hidden"
     ><button
-      class="py-[.5vmax] px-[1.5vmax] border-2 border-white text-white rounded-lg text-[1vmax] hover:bg-white hover:text-[#cf2e2e] hover:font-medium max-sm:py-[.75vmax] max-sm:w-[11vmax] max-sm:text-[1.8vmax] max-sm:hidden"
+      class="py-[.5vmax] px-[1.5vmax] border-2 border-white text-white rounded-lg text-[1vmax] hover:bg-white hover:text-[#800000] hover:font-medium max-sm:py-[.75vmax] max-sm:w-[11vmax] max-sm:text-[1.8vmax] max-sm:hidden"
     >
       Logout
     </button></a
@@ -39,7 +39,7 @@
 </div>
 <% }else{ %>
 <div
-  class="navbox absolute top-0 left-0 h-[5vmax] w-full bg-[#cf2e2e] flex items-center justify-between px-[5vmax] text-[#fff] z-10 max-sm:px-[2.5vmax] max-sm:h-0 max-sm:py-[4vmax]"
+  class="navbox absolute top-0 left-0 h-[5vmax] w-full bg-[#800000] flex items-center justify-between px-[5vmax] text-[#fff] z-10 max-sm:px-[2.5vmax] max-sm:h-0 max-sm:py-[4vmax]"
 >
   <h1 class="text-[1.5vmax]">Logo</h1>
   <div
@@ -55,14 +55,14 @@
   <div class="buttonbox flex gap-2 max-sm:hidden">
     <a href="/user/register"
       ><button
-        class="py-[.5vmax] w-[7vmax] border-2 border-white text-white rounded-lg text-[1vmax] hover:bg-white hover:text-[#cf2e2e] hover:font-medium max-sm:py-[.75vmax] max-sm:w-[11vmax] max-sm:text-[1.8vmax]"
+        class="py-[.5vmax] w-[7vmax] border-2 border-white text-white rounded-lg text-[1vmax] hover:bg-white hover:text-[#800000] hover:font-medium max-sm:py-[.75vmax] max-sm:w-[11vmax] max-sm:text-[1.8vmax]"
       >
         Register
       </button></a
     >
     <a href="/user/login"
       ><button
-        class="py-[.5vmax] w-[7vmax] border-2 border-white text-white rounded-lg text-[1vmax] hover:bg-white hover:text-[#cf2e2e] hover:font-medium max-sm:py-[.75vmax] max-sm:w-[11vmax] max-sm:text-[1.8vmax]"
+        class="py-[.5vmax] w-[7vmax] border-2 border-white text-white rounded-lg text-[1vmax] hover:bg-white hover:text-[#800000] hover:font-medium max-sm:py-[.75vmax] max-sm:w-[11vmax] max-sm:text-[1.8vmax]"
       >
         Login
       </button></a
