--- a/views/userRegister.ejs
+++ b/views/userRegister.ejs
@@ -4,7 +4,7 @@
   class="holder formHolder w-full flex items-center justify-center relative bg-white pb-[4.5vmax] max-sm:px-[2.5vmax]"
 >
   <div
-    class="form w-[60%] p-[4vmax] pt-[3.5vmax] rounded-md mt-[10vmax] z-10 bg-[#cf2e2e] max-sm:w-full max-sm:p-[2.5vmax] max-sm:mt-[12.5vmax] max-sm:pt-[2vmax] max-sm:pb-[3.5vmax]"
+    class="form w-[60%] p-[4vmax] pt-[3.5vmax] rounded-md mt-[10vmax] z-10 bg-[#800000] max-sm:w-full max-sm:p-[2.5vmax] max-sm:mt-[12.5vmax] max-sm:pt-[2vmax] max-sm:pb-[3.5vmax]"
   >
     <h1
       class="text-[2vmax] text-white text-center tracking-tight max-sm:text-[3.5vmax]"
