--- a/views/membership.ejs
+++ b/views/membership.ejs
@@ -6,21 +6,21 @@
   <h1
     class="text-[3vmax] font-semibold text-zinc-500 tracking-tight border-b-2 border-zinc-300 w-full py-2 max-sm:text-[4vmax] max-sm:py-3"
   >
-    Membership <span class="text-[#cf2e2e]">packages</span>
+    Membership <span class="text-[#800000]">packages</span>
   </h1>
   <div
     class="packagesHolder w-full flex gap-[2.5vmax] py-[5vmax] max-sm:flex-col max-sm:gap-[5vmax]"
   >
     <div
-      class="package1 w-1/3 rounded-xl overflow-hidden flex flex-col items-center max-sm:w-full"
+      class="package1 w-1/3 rounded-xl overflow-hidden flex flex-col items-center max-sm:w-full bg-yellow-200"
     >
       <h4
-        class="text-[2vmax] font-semibold text-white tracking-tight w-full h-[5vmax] flex items-center justify-center bg-[#cf2e2e] max-sm:text-[3vmax] max-sm:h-[7vmax]"
+        class="text-[2vmax] font-semibold text-white tracking-tight w-full h-[5vmax] flex items-center justify-center bg-[#800000] max-sm:text-[3vmax] max-sm:h-[7vmax]"
       >
         Gold Plan
       </h4>
       <div
-        class="pricebox relative w-[89%] bg-[#cf2e2e] mt-[1.5vmax] rounded-xl py-[1vmax] max-sm:mt-[2.5vmax] max-sm:pt-[2vmax] max-sm:pb-[1.5vmax]"
+        class="pricebox relative w-[89%] bg-[#800000] mt-[1.5vmax] rounded-xl py-[1vmax] max-sm:mt-[2.5vmax] max-sm:pt-[2vmax] max-sm:pb-[1.5vmax]"
       >
         <h5
           class="text-[1.1vmax] font-semibold text-white tracking-tight absolute top-[1vmax] left-[1vmax] max-sm:text-[1.8vmax] max-sm:top-[1.5vmax] max-sm:left-[1.5vmax]"
@@ -43,7 +43,7 @@
         </h5>
       </div>
       <div
-        class="benefitbox w-[89%] h-[24vmax] p-[1.5vmax] bg-[#cf2e2e] mt-[1.5vmax] rounded-xl max-sm:h-[36vmax] max-sm:p-[2.5vmax] max-sm:mt-[2.5vmax]"
+        class="benefitbox w-[89%] h-[24vmax] p-[1.5vmax] bg-[#800000] mt-[1.5vmax] rounded-xl max-sm:h-[36vmax] max-sm:p-[2.5vmax] max-sm:mt-[2.5vmax]"
       >
         <h4
           class="text-[2vmax] font-semibold text-white tracking-tight w-full text-center max-sm:text-[3vmax]"
@@ -83,15 +83,15 @@
       </button>
     </div>
     <div
-      class="package2 w-1/3 rounded-xl overflow-hidden flex flex-col items-center max-sm:w-full"
+      class="package2 w-1/3 rounded-xl overflow-hidden flex flex-col items-center max-sm:w-full bg-yellow-200"
     >
       <h4
-        class="text-[2vmax] font-semibold text-white tracking-tight w-full h-[5vmax] flex items-center justify-center bg-[#cf2e2e] max-sm:text-[3vmax] max-sm:h-[7vmax]"
+        class="text-[2vmax] font-semibold text-white tracking-tight w-full h-[5vmax] flex items-center justify-center bg-[#800000] max-sm:text-[3vmax] max-sm:h-[7vmax]"
       >
         Diamond Plan
       </h4>
       <div
-        class="pricebox relative w-[89%] bg-[#cf2e2e] mt-[1.5vmax] rounded-xl py-[1vmax] max-sm:mt-[2.5vmax] max-sm:pt-[2vmax] max-sm:pb-[1.5vmax]"
+        class="pricebox relative w-[89%] bg-[#800000] mt-[1.5vmax] rounded-xl py-[1vmax] max-sm:mt-[2.5vmax] max-sm:pt-[2vmax] max-sm:pb-[1.5vmax]"
       >
         <h5
           class="text-[1.1vmax] font-semibold text-white tracking-tight absolute top-[1vmax] left-[1vmax] max-sm:text-[1.8vmax] max-sm:top-[1.5vmax] max-sm:left-[1.5vmax]"
@@ -114,7 +114,7 @@
         </h5>
       </div>
       <div
-        class="benefitbox w-[89%] h-[24vmax] p-[1.5vmax] bg-[#cf2e2e] mt-[1.5vmax] rounded-xl max-sm:h-[36vmax] max-sm:p-[2.5vmax] max-sm:mt-[2.5vmax]"
+        class="benefitbox w-[89%] h-[24vmax] p-[1.5vmax] bg-[#800000] mt-[1.5vmax] rounded-xl max-sm:h-[36vmax] max-sm:p-[2.5vmax] max-sm:mt-[2.5vmax]"
       >
         <h4
           class="text-[2vmax] font-semibold text-white tracking-tight w-full text-center max-sm:text-[3vmax]"
@@ -160,15 +160,15 @@
       </button>
     </div>
     <div
-      class="package3 w-1/3 rounded-xl overflow-hidden flex flex-col items-center max-sm:w-full"
+      class="package3 w-1/3 rounded-xl overflow-hidden flex flex-col items-center max-sm:w-full bg-yellow-200"
     >
       <h4
-        class="text-[2vmax] font-semibold text-white tracking-tight w-full h-[5vmax] flex items-center justify-center bg-[#cf2e2e] max-sm:text-[3vmax] max-sm:h-[7vmax]"
+        class="text-[2vmax] font-semibold text-white tracking-tight w-full h-[5vmax] flex items-center justify-center bg-[#800000] max-sm:text-[3vmax] max-sm:h-[7vmax]"
       >
         Platinum Plan
       </h4>
       <div
-        class="pricebox relative w-[89%] bg-[#cf2e2e] mt-[1.5vmax] rounded-xl py-[1vmax] max-sm:mt-[2.5vmax] max-sm:pt-[2vmax] max-sm:pb-[1.5vmax]"
+        class="pricebox relative w-[89%] bg-[#800000] mt-[1.5vmax] rounded-xl py-[1vmax] max-sm:mt-[2.5vmax] max-sm:pt-[2vmax] max-sm:pb-[1.5vmax]"
       >
         <h5
           class="text-[1.1vmax] font-semibold text-white tracking-tight absolute top-[1vmax] left-[1vmax] max-sm:text-[1.8vmax] max-sm:top-[1.5vmax] max-sm:left-[1.5vmax]"
@@ -191,7 +191,7 @@
         </h5>
       </div>
       <div
-        class="benefitbox w-[89%] h-[24vmax] p-[1.5vmax] bg-[#cf2e2e] mt-[1.5vmax] rounded-xl max-sm:h-[36vmax] max-sm:p-[2.5vmax] max-sm:mt-[2.5vmax]"
+        class="benefitbox w-[89%] h-[24vmax] p-[1.5vmax] bg-[#800000] mt-[1.5vmax] rounded-xl max-sm:h-[36vmax] max-sm:p-[2.5vmax] max-sm:mt-[2.5vmax]"
       >
         <h4
           class="text-[2vmax] font-semibold text-white tracking-tight w-full text-center max-sm:text-[3vmax]"
@@ -241,15 +241,15 @@
     class="packagesHolder w-full flex gap-[2.5vmax] max-sm:flex-col max-sm:gap-[5vmax]"
   >
     <div
-      class="package4 w-1/3 rounded-xl overflow-hidden flex flex-col items-center max-sm:w-full"
+      class="package4 w-1/3 rounded-xl overflow-hidden flex flex-col items-center max-sm:w-full bg-yellow-200"
     >
       <h4
-        class="text-[2vmax] font-semibold text-white tracking-tight w-full h-[5vmax] flex items-center justify-center bg-[#cf2e2e] max-sm:text-[3vmax] max-sm:h-[7vmax]"
+        class="text-[2vmax] font-semibold text-white tracking-tight w-full h-[5vmax] flex items-center justify-center bg-[#800000] max-sm:text-[3vmax] max-sm:h-[7vmax]"
       >
         Platinum + Plan
       </h4>
       <div
-        class="pricebox relative w-[89%] bg-[#cf2e2e] mt-[1.5vmax] rounded-xl py-[1vmax] max-sm:mt-[2.5vmax] max-sm:pt-[2vmax] max-sm:pb-[1.5vmax]"
+        class="pricebox relative w-[89%] bg-[#800000] mt-[1.5vmax] rounded-xl py-[1vmax] max-sm:mt-[2.5vmax] max-sm:pt-[2vmax] max-sm:pb-[1.5vmax]"
       >
         <h5
           class="text-[1.1vmax] font-semibold text-white tracking-tight absolute top-[1vmax] left-[1vmax] max-sm:text-[1.8vmax] max-sm:top-[1.5vmax] max-sm:left-[1.5vmax]"
@@ -272,7 +272,7 @@
         </h5>
       </div>
       <div
-        class="benefitbox w-[89%] h-[24vmax] p-[1.5vmax] bg-[#cf2e2e] mt-[1.5vmax] rounded-xl max-sm:h-[36vmax] max-sm:p-[2.5vmax] max-sm:mt-[2.5vmax]"
+        class="benefitbox w-[89%] h-[24vmax] p-[1.5vmax] bg-[#800000] mt-[1.5vmax] rounded-xl max-sm:h-[36vmax] max-sm:p-[2.5vmax] max-sm:mt-[2.5vmax]"
       >
         <h4
           class="text-[2vmax] font-semibold text-white tracking-tight w-full text-center max-sm:text-[3vmax]"
@@ -318,15 +318,15 @@
       </button>
     </div>
     <div
-      class="package5 w-1/3 rounded-xl overflow-hidden flex flex-col items-center max-sm:w-full"
+      class="package5 w-1/3 rounded-xl overflow-hidden flex flex-col items-center max-sm:w-full bg-yellow-200"
     >
       <h4
-        class="text-[2vmax] font-semibold text-white tracking-tight w-full h-[5vmax] flex items-center justify-center bg-[#cf2e2e] max-sm:text-[3vmax] max-sm:h-[7vmax]"
+        class="text-[2vmax] font-semibold text-white tracking-tight w-full h-[5vmax] flex items-center justify-center bg-[#800000] max-sm:text-[3vmax] max-sm:h-[7vmax]"
       >
         Exclusive Plan
       </h4>
       <div
-        class="pricebox relative w-[89%] bg-[#cf2e2e] mt-[1.5vmax] rounded-xl py-[1vmax] max-sm:mt-[2.5vmax] max-sm:pt-[2vmax] max-sm:pb-[1.5vmax]"
+        class="pricebox relative w-[89%] bg-[#800000] mt-[1.5vmax] rounded-xl py-[1vmax] max-sm:mt-[2.5vmax] max-sm:pt-[2vmax] max-sm:pb-[1.5vmax]"
       >
         <h5
           class="text-[1.5vmax] font-semibold text-white tracking-tight text-center max-sm:text-[2.3vmax]"
@@ -345,7 +345,7 @@
         </h5>
       </div>
       <div
-        class="benefitbox w-[89%] h-[24vmax] p-[1.5vmax] bg-[#cf2e2e] mt-[1.5vmax] rounded-xl max-sm:h-[36vmax] max-sm:p-[2.5vmax] max-sm:mt-[2.5vmax]"
+        class="benefitbox w-[89%] h-[24vmax] p-[1.5vmax] bg-[#800000] mt-[1.5vmax] rounded-xl max-sm:h-[36vmax] max-sm:p-[2.5vmax] max-sm:mt-[2.5vmax]"
       >
         <h4
           class="text-[2vmax] font-semibold text-white tracking-tight w-full text-center max-sm:text-[3vmax]"
