--- a/views/userLogin.ejs
+++ b/views/userLogin.ejs
@@ -4,7 +4,7 @@
   class="holder formHolder h-screen w-full flex flex-col items-center justify-center relative bg-white max-sm:p-[2.5vmax]"
 >
   <div
-    class="text-center bg-[#cf2e2e] p-[4vmax] pt-[3.5vmax] rounded-md z-10 max-sm:p-[2.5vmax] max-sm:w-full max-sm:pt-[2vmax] max-sm:pb-[3.5vmax]"
+    class="text-center bg-[#800000] p-[4vmax] pt-[3.5vmax] rounded-md z-10 max-sm:p-[2.5vmax] max-sm:w-full max-sm:pt-[2vmax] max-sm:pb-[3.5vmax]"
   >
     <h1
       class="text-[2vmax] text-white text-center tracking-tight max-sm:text-[3vmax]"
