some changes in code

--- a/views/about.ejs
+++ b/views/about.ejs
@@ -2,17 +2,23 @@
 <!--  -->
 <div
   class="contentBox w-full relative bg-white pt-[8vmax] pb-[4vmax] px-[10vmax] max-sm:px-[2.5vmax] max-sm:pt-[10vmax] max-sm:pb-[4.5vmax]"
+  style="
+    background-image: url(/images/random.jpeg);
+    background-size: cover;
+    background-position: center -20vmax;
+    background-repeat: no-repeat;
+  "
 >
   <div
-    class="row border-b-2 border-zinc-300 w-full py-2 flex items-center justify-between max-sm:py-3"
+    class="row border-b-2 border-zinc-300 w-full py-2 flex items-center justify-between max-sm:py-3 z-20"
   >
     <h1
-      class="text-[3vmax] font-semibold text-zinc-500 tracking-tight max-sm:text-[4vmax]"
+      class="text-[3vmax] font-semibold text-white tracking-tight max-sm:text-[4vmax]"
     >
-      About <span class="text-[#800000]">us</span>
+      About us
     </h1>
     <div
-      class="langbox relative py-[.6vmax] bg-white flex justify-between max-sm:py-[1vmax]"
+      class="langbox relative py-[.6vmax] bg-white rounded-lg flex justify-between max-sm:py-[1vmax]"
     >
       <button
         class="english h-full w-[7vmax] text-white z-10 text-[1.1vmax] max-sm:w-[11vmax] max-sm:text-[1.8vmax]"
@@ -36,7 +42,7 @@
     class="englishContent flex flex-col gap-[1.3vmax] mt-[3.5vmax] max-sm:mt-[4vmax] max-sm:gap-[2.5vmax]"
   >
     <p
-      class="leading-[2.3vmax] text-[1.3vmax] max-sm:leading-[3vmax] max-sm:text-[2vmax]"
+      class="text-white leading-[2.3vmax] text-[1.3vmax] max-sm:leading-[3vmax] max-sm:text-[2vmax]"
     >
       We are M.P. MaitriMony as a leading provider of grassroots network and
       online matchmaking services, has been providing matrimonial services since
@@ -45,7 +51,7 @@
       partner for marriage.
     </p>
     <p
-      class="leading-[2.3vmax] text-[1.3vmax] max-sm:leading-[3vmax] max-sm:text-[2vmax]"
+      class="text-white leading-[2.3vmax] text-[1.3vmax] max-sm:leading-[3vmax] max-sm:text-[2vmax]"
     >
       After working for a decade in rural area of ​​Madhya Pradesh we realized
       that a lot of boys and girls are looking for right partner for themselves
@@ -54,20 +60,20 @@
       network and cover 80% of our villages.
     </p>
     <p
-      class="leading-[2.3vmax] text-[1.3vmax] max-sm:leading-[3vmax] max-sm:text-[2vmax]"
+      class="text-white leading-[2.3vmax] text-[1.3vmax] max-sm:leading-[3vmax] max-sm:text-[2vmax]"
     >
       The population has no option to connect with other districts, states. We
       have decided to work at the grassroots level and especially in the rural
       area through our online website, now we have a lot of registered members
       who are looking for life partner through us.
     </p>
-    <h3
-      class="text-[2vmax] text-[#800000] font-bold mt-[1.3vmax] max-sm:text-[3vmax] max-sm:mt-[1vmax] max-sm:mb-[-.9vmax]"
+    <h1
+      class="text-[3vmax] text-[#fff] font-semibold mt-[1.3vmax] max-sm:text-[3vmax] max-sm:mt-[1vmax] max-sm:mb-[-.9vmax]"
     >
       Our mission :-
-    </h3>
+    </h1>
     <p
-      class="leading-[2.3vmax] text-[1.3vmax] max-sm:leading-[3vmax] max-sm:text-[2vmax]"
+      class="text-white leading-[2.3vmax] text-[1.3vmax] max-sm:leading-[3vmax] max-sm:text-[2vmax]"
     >
       Our mission is to provide a satisfactory experience to the people of urban
       and rural areas of Madhya Pradesh and all over India by providing a
@@ -79,7 +85,7 @@
       as traveling with them.
     </p>
     <p
-      class="leading-[2.3vmax] text-[1.3vmax] max-sm:leading-[3vmax] max-sm:text-[2vmax]"
+      class="text-white leading-[2.3vmax] text-[1.3vmax] max-sm:leading-[3vmax] max-sm:text-[2vmax]"
     >
       We know your time is valuable, that's why we've created a system where you
       can choose who is eligible to contact you. This saves you from wasting
@@ -88,7 +94,7 @@
       only for M.P.Matrimony and is not available on other matrimonial sites.
     </p>
     <p
-      class="leading-[2.3vmax] text-[1.3vmax] max-sm:leading-[3vmax] max-sm:text-[2vmax]"
+      class="text-white leading-[2.3vmax] text-[1.3vmax] max-sm:leading-[3vmax] max-sm:text-[2vmax]"
     >
       Since M.P.Matrimony aims to provide the best service at a relatively low
       price, is a popular service, so we receive more new profiles than other
@@ -99,7 +105,7 @@
     class="hindiContent hidden flex-col gap-[1.3vmax] mt-[4vmax] max-sm:mt-[4vmax] max-sm:gap-[2.3vmax]"
   >
     <p
-      class="leading-[2.5vmax] text-[1.4vmax] max-sm:leading-[3.5vmax] max-sm:text-[2vmax]"
+      class="text-white leading-[2.5vmax] text-[1.3vmax] max-sm:leading-[3.5vmax] max-sm:text-[2vmax]"
     >
       हम विशेष रूप से मध्य प्रदेश के शहरी व ग्रामीण क्षेत्र और पूरे भारत के
       उपयोगकर्ताओं को जमीनी स्तर नेटवर्क और ऑनलाइन मैचमेकिंग सेवाओं के अग्रणी
@@ -107,7 +113,7 @@
       के लिए साथी चुनने के महत्व को समझते हैं।
     </p>
     <p
-      class="leading-[2.5vmax] text-[1.4vmax] max-sm:leading-[3.5vmax] max-sm:text-[2vmax]"
+      class="text-white leading-[2.5vmax] text-[1.3vmax] max-sm:leading-[3.5vmax] max-sm:text-[2vmax]"
     >
       मध्य प्रदेश के ग्रामीण क्षेत्र में एक दशक तक काम करने के बाद हमें एहसास
       हुआ कि बहुत सारे लड़के और लड़कियाँ बहुत अच्छे विवाह प्रोफ़ाइल के साथ अपने
@@ -125,14 +131,14 @@
       हमारा मिशन :-
     </h3>
     <p
-      class="leading-[2.5vmax] text-[1.4vmax] max-sm:leading-[3.5vmax] max-sm:text-[2vmax]"
+      class="text-white leading-[2.5vmax] text-[1.3vmax] max-sm:leading-[3.5vmax] max-sm:text-[2vmax]"
     >
       हमारा मिशन मध्य प्रदेश लोगों के लिए विशेष सेवा प्रदान करना है,लोगों को एक
       ऐसी सेवा प्रदान कराना जो सभी के लिए पसन्द का जीवन-साथी ढूंढने के लिए
       सुरक्षित और आसान हो।
     </p>
     <p
-      class="leading-[2.5vmax] text-[1.4vmax] max-sm:leading-[3.5vmax] max-sm:text-[2vmax]"
+      class="text-white leading-[2.5vmax] text-[1.3vmax] max-sm:leading-[3.5vmax] max-sm:text-[2vmax]"
     >
       सभी आयु वर्ग सभी धर्म जाती,अविवाहित्त, तलाकशुदा, विधवा, विधुर उच्च वर्ग,
       मध्यम वर्ग, निम्न आय वर्ग उच्च शिक्षित या नाममात्र शिक्षित बिजनेस क्लास,
@@ -140,7 +146,7 @@
       आसान प्रणाली ।
     </p>
     <p
-      class="leading-[2.5vmax] text-[1.4vmax] max-sm:leading-[3.5vmax] max-sm:text-[2vmax]"
+      class="text-white leading-[2.5vmax] text-[1.3vmax] max-sm:leading-[3.5vmax] max-sm:text-[2vmax]"
     >
       हम जानते हैं कि आपका समय कीमती है, इसीलिए हमने एक प्रणाली बनाई है जहां आप
       चुन सकते हैं कि कौन आपसे संपर्क करने के योग्य है। यह आपको असंगत
