--- a/public/stylesheets/output.css
+++ b/public/stylesheets/output.css
@@ -678,6 +678,26 @@ video {
   height: 100vh;
 }
 
+.h-\[100\%\] {
+  height: 100%;
+}
+
+.h-\[110\%\] {
+  height: 110%;
+}
+
+.h-\[120\%\] {
+  height: 120%;
+}
+
+.h-\[10\%\] {
+  height: 10%;
+}
+
+.h-\[140\%\] {
+  height: 140%;
+}
+
 .min-h-screen {
   min-height: 100vh;
 }
@@ -820,6 +840,11 @@ video {
   background-color: rgb(128 0 0 / var(--tw-bg-opacity));
 }
 
+.bg-\[\#fff\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
 .bg-black {
   --tw-bg-opacity: 1;
   background-color: rgb(0 0 0 / var(--tw-bg-opacity));
@@ -838,6 +863,16 @@ video {
 .bg-yellow-200 {
   --tw-bg-opacity: 1;
   background-color: rgb(254 240 138 / var(--tw-bg-opacity));
+}
+
+.object-contain {
+  -o-object-fit: contain;
+     object-fit: contain;
+}
+
+.object-cover {
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 
 .p-\[\.8vmax\] {
@@ -961,10 +996,6 @@ video {
   font-size: 1.3vmax;
 }
 
-.text-\[1\.4vmax\] {
-  font-size: 1.4vmax;
-}
-
 .text-\[1\.5vmax\] {
   font-size: 1.5vmax;
 }
@@ -1049,6 +1080,11 @@ video {
 .text-zinc-500 {
   --tw-text-opacity: 1;
   color: rgb(113 113 122 / var(--tw-text-opacity));
+}
+
+.text-\[\#000\] {
+  --tw-text-opacity: 1;
+  color: rgb(0 0 0 / var(--tw-text-opacity));
 }
 
 .shadow-none {
