--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -1,8 +1,12 @@
 <% if(user){ %>
 <div
-  class="navbox absolute top-0 left-0 h-[5vmax] w-full bg-[#800000] flex items-center justify-between px-[5vmax] text-[#fff] z-20 max-sm:px-[2.5vmax] max-sm:h-0 max-sm:py-[4vmax]"
+  class="navbox absolute top-0 left-0 h-[5vmax] w-full bg-[#fff] flex items-center justify-between px-[5vmax] text-[#fff] z-20 max-sm:px-[2.5vmax] max-sm:h-0 max-sm:py-[4vmax]"
 >
-  <h1 class="text-[1.5vmax]">Logo</h1>
+  <img
+    src="/images/WhatsApp_Image_2024-08-14_at_16.24.58_10922adb-removebg.png"
+    alt=""
+    class="h-100% object-contain"
+  />
   <div
     class="linkbox absolute top-[50%] left-[50%] translate-x-[-50%] translate-y-[-50%] flex gap-[2.5vmax] max-sm:hidden"
   >
@@ -39,18 +43,20 @@
 </div>
 <% }else{ %>
 <div
-  class="navbox absolute top-0 left-0 h-[5vmax] w-full bg-[#800000] flex items-center justify-between px-[5vmax] text-[#fff] z-10 max-sm:px-[2.5vmax] max-sm:h-0 max-sm:py-[4vmax]"
+  class="navbox absolute top-0 left-0 h-[5vmax] w-full bg-[#fff] flex items-center justify-between px-[5vmax] text-[#fff] z-10 max-sm:px-[2.5vmax] max-sm:h-0 max-sm:py-[4vmax] overflow-hidden"
 >
-  <h1 class="text-[1.5vmax]">Logo</h1>
+  <img src="/images/logo.jpg" alt="" class="h-[140%] object-cover" />
   <div
     class="linkbox absolute top-[50%] left-[50%] translate-x-[-50%] translate-y-[-50%] flex gap-[2.5vmax] max-sm:hidden"
   >
-    <a href="/" class="text-[1vmax]">Home</a>
-    <a href="/about" class="text-[1vmax]">About Us</a>
-    <a href="/contact" class="text-[1vmax]">Contact</a>
-    <a href="/memberships" class="text-[1vmax]">Memberships</a>
-    <a href="/privacy-policy" class="text-[1vmax]">Privacy policy</a>
-    <a href="/faq" class="text-[1vmax]">FAQ</a>
+    <a href="/" class="text-[1vmax] text-[#000]">Home</a>
+    <a href="/about" class="text-[1vmax] text-[#000]">About Us</a>
+    <a href="/contact" class="text-[1vmax] text-[#000]">Contact</a>
+    <a href="/memberships" class="text-[1vmax] text-[#000]">Memberships</a>
+    <a href="/privacy-policy" class="text-[1vmax] text-[#000]"
+      >Privacy policy</a
+    >
+    <a href="/faq" class="text-[1vmax] text-[#000]">FAQ</a>
   </div>
   <div class="buttonbox flex gap-2 max-sm:hidden">
     <a href="/user/register"
